# openMP_lab

./: CMakeLists.txt  README.md  REPORT.md  run.sh
src/: exercice_2b.c  exercice_3.c  exercice_4.c  exercice_5.c
